[gd_scene load_steps=8 format=3 uid="uid://dtuaast8087a5"]

[ext_resource type="Script" path="res://Slug.gd" id="1_3wvdn"]
[ext_resource type="SpriteFrames" uid="uid://byacpr7o72n7u" path="res://Sprites/slug.tres" id="2_wnkfc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sg4mh"]
radius = 7.0
height = 52.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8qkkp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bg5me"]
size = Vector2(15, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qkwve"]
size = Vector2(29, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_qmdhe"]
radius = 170.179

[node name="Slug" type="RigidBody2D"]
script = ExtResource("1_3wvdn")

[node name="HeadShape" type="CollisionShape2D" parent="."]
position = Vector2(6, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_sg4mh")

[node name="BodyShape" type="CollisionShape2D" parent="."]
position = Vector2(-12, -12)
shape = SubResource("CircleShape2D_8qkkp")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(5, -25)
sprite_frames = ExtResource("2_wnkfc")
animation = &"move"
frame_progress = 0.690376

[node name="SquishDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SquishDetect"]
position = Vector2(-8, -14)
shape = SubResource("RectangleShape2D_bg5me")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SquishDetect"]
position = Vector2(12.5, -4.5)
shape = SubResource("RectangleShape2D_qkwve")

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource("CircleShape2D_qmdhe")

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
